--- a/css/main.css
+++ b/css/main.css
@@ -560,3 +560,134 @@ input[type=radio] {
   .form-2 .form-btn {
     width: 100%;
     height: auto; }
+
+.wrap-table {
+  width: 100%;
+  height: auto;
+  margin-bottom: 39px; }
+
+#table-page-3 {
+  width: 100%;
+  height: auto;
+  border-collapse: collapse; }
+  #table-page-3 thead th {
+    font: 15px Montserrat-Medium;
+    color: #ffffff;
+    background-color: #2b3d8d; }
+  #table-page-3 th, #table-page-3 td {
+    height: 50px;
+    text-align: center; }
+    #table-page-3 th:first-of-type, #table-page-3 td:first-of-type {
+      border-radius: 10px 0 0 10px;
+      padding: 0 40px 0 0; }
+    #table-page-3 th:last-of-type, #table-page-3 td:last-of-type {
+      border-radius: 0 10px 10px 0; }
+  #table-page-3 tbody {
+    counter-reset: table-page-3-counter; }
+    #table-page-3 tbody td {
+      font: 15px Montserrat-Regular;
+      color: #565656; }
+    #table-page-3 tbody tr:nth-child(even) {
+      background-color: #f6f8ff; }
+    #table-page-3 tbody td:first-of-type::before {
+      content: counter(table-page-3-counter);
+      counter-increment: table-page-3-counter; }
+    #table-page-3 tbody tr {
+      overflow: hidden;
+      border-radius: 10px;
+      cursor: pointer; }
+      #table-page-3 tbody tr:hover {
+        -webkit-box-shadow: inset 0 0 10px 1px rgba(43, 63, 140, 0.25);
+        box-shadow: inset 0 0 10px 1px rgba(43, 63, 140, 0.25);
+        -webkit-transition: .3s;
+        transition: .3s; }
+
+.yes {
+  color: #47d881; }
+
+.no {
+  color: #ec2727; }
+
+.pagination,
+.pagination li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.pagination li {
+  width: auto;
+  height: auto;
+  padding-right: 12px; }
+  .pagination li:last-child {
+    padding-right: 0; }
+
+.pagination a {
+  width: 35px;
+  height: 35px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-weight: 300;
+  font: 13px "Montserrat-Medium";
+  color: #2b3d8d;
+  text-decoration: none;
+  border-radius: 50%;
+  background-color: #f0f2fa;
+  -webkit-box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.35);
+  box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.35);
+  position: relative; }
+
+.pagination li:not([class*="current"]) a:hover {
+  -webkit-box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25); }
+
+.pagination li:not([class*="current"]) a:focus,
+.pagination li:not([class*="current"]) a:active {
+  -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
+  border-left-width: 1px; }
+
+.pagination li:first-of-type span,
+.pagination li:last-of-type span,
+.pagination li:nth-of-type(2) span,
+.pagination li:nth-last-of-type(2) span {
+  /* screen readers only */
+  position: absolute;
+  top: -9999px;
+  left: -9999px; }
+
+.pagination li:first-child a::before,
+.pagination li:last-child a::after {
+  content: '';
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  -webkit-transform: rotate(135deg);
+  transform: rotate(135deg);
+  border-right: 1px solid #2b3d8d;
+  border-bottom: 1px solid #2b3d8d; }
+
+.pagination li:last-child a::after,
+.pagination li:nth-last-of-type(2) a::after {
+  -webkit-transform: rotate(315deg);
+  transform: rotate(315deg); }
+
+.pagination li.current a {
+  color: white;
+  background-color: #f0743e;
+  cursor: default;
+  pointer-events: none; }
