--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,6 +1,7 @@
 @import "all"
 @import "fonts"
 @import "head"
-@import "home"
+@import "page-1"
 @import "page-2"
 @import "page-3"
+@import "page-4"
