--- a/sass/_page-4.sass
+++ b/sass/_page-4.sass
@@ -138,8 +138,8 @@
       justify-content: space-between
       align-items: center
       margin-bottom: 10px
-      th, td
-
+      &:last-of-type
+        margin-bottom: 0
     span
       width: 149px
       height: 40px
