добавил страницу login.html и popup

--- a/sass/_all.sass
+++ b/sass/_all.sass
@@ -32,6 +32,9 @@ section
   display: flex
   margin: 0 auto
 
+input:focus
+  outline: none
+
 $dusty-orange: #f0743e
 $blue-purple: #772ec8
 $bright-sky-blue: #00b4ff
