--- a/sass/_page-4.sass
+++ b/sass/_page-4.sass
@@ -148,3 +148,83 @@
       border-radius: 20px
       background-color: #ffffff
       padding: 10px 19px
+
+
+
+
+
+.modal-overlay
+  z-index: 200
+  .modal
+    width: 1077px
+    height: 588px
+
+.modal-content
+  .container
+    flex-flow: column
+
+  .title
+    width: 100%
+    height: auto
+    display: flex
+    justify-content: center
+    margin: 47px 0 40px 0
+    h2
+      margin: 0
+
+
+
+
+.modal-table
+  width: 100%
+  height: auto
+  padding: 0 54px
+  table
+    width: 100%
+    height: auto
+    border-collapse: collapse
+    tr
+      display: flex
+      justify-content: space-between
+    th
+      width: 170px
+      text-align: left
+      padding-bottom: 8px
+      font: 15px Montserrat-Medium
+      color: $dusk-blue
+    td
+      width: 170px
+      padding-bottom: 35px
+      font: 13px Montserrat-Regular
+      color: $greyish-brown
+      span
+        width: 170px
+        height: 40px
+        display: flex
+        align-items: center
+        border-radius: 20px
+        background-color: #f0f2fa
+        padding: 10px 20px
+
+  .btns
+    width: 100%
+    height: auto
+    display: flex
+    justify-content: center
+    align-items: center
+    margin: 33px 0 32px 0
+    .btn
+      width: 160px
+      height: 50px
+      border-radius: 25px
+      margin: 0 15px
+      border: 1px solid $dusty-orange
+      transition: .3s
+      &:hover
+        border: 1px solid $dusk-blue
+        background: #ffffff
+        color: $dusk-blue
+
+
+
+
