--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,9 @@ section .container {
   display: flex;
   margin: 0 auto; }
 
+input:focus {
+  outline: none; }
+
 @font-face {
   font-family: 'Montserrat-SemiBold';
   src: url("../fonts/Montserrat/Montserrat-SemiBold.eot");
@@ -884,3 +887,313 @@ input[type=radio] {
       border-radius: 20px;
       background-color: #ffffff;
       padding: 10px 19px; }
+
+.modal-overlay {
+  z-index: 200; }
+  .modal-overlay .modal {
+    width: 1077px;
+    height: 588px; }
+
+.modal-content .container {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: column;
+  flex-flow: column; }
+
+.modal-content .title {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin: 47px 0 40px 0; }
+  .modal-content .title h2 {
+    margin: 0; }
+
+.modal-table {
+  width: 100%;
+  height: auto;
+  padding: 0 54px; }
+  .modal-table table {
+    width: 100%;
+    height: auto;
+    border-collapse: collapse; }
+    .modal-table table tr {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+      justify-content: space-between; }
+    .modal-table table th {
+      width: 170px;
+      text-align: left;
+      padding-bottom: 8px;
+      font: 15px Montserrat-Medium;
+      color: #2b3d8d; }
+    .modal-table table td {
+      width: 170px;
+      padding-bottom: 35px;
+      font: 13px Montserrat-Regular;
+      color: #565656; }
+      .modal-table table td span {
+        width: 170px;
+        height: 40px;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        border-radius: 20px;
+        background-color: #f0f2fa;
+        padding: 10px 20px; }
+  .modal-table .btns {
+    width: 100%;
+    height: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin: 33px 0 32px 0; }
+    .modal-table .btns .btn {
+      width: 160px;
+      height: 50px;
+      border-radius: 25px;
+      margin: 0 15px;
+      border: 1px solid #f0743e;
+      -webkit-transition: .3s;
+      transition: .3s; }
+      .modal-table .btns .btn:hover {
+        border: 1px solid #2b3d8d;
+        background: #ffffff;
+        color: #2b3d8d; }
+
+/**
+ * Variables
+ */
+/**
+ * Base styles
+ */
+/**
+ * Overlay
+ * -- only show for tablet and up
+ */
+@media only screen and (min-width: 40em) {
+  .modal-overlay {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+    background: rgba(255, 255, 255, 0.52);
+    opacity: 0;
+    visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1), visibility 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+    transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1), visibility 0.6s cubic-bezier(0.55, 0, 0.1, 1); }
+    .modal-overlay.active {
+      opacity: 1;
+      visibility: visible;
+      overflow: hidden; } }
+
+/**
+ * Modal
+ */
+.modal {
+  width: 1030px;
+  height: 596px;
+  background-color: #fff;
+  border-radius: 20px;
+  -webkit-box-shadow: 0 9px 51px 0 rgba(0, 0, 0, 0.31);
+  box-shadow: 0 9px 51px 0 rgba(0, 0, 0, 0.31);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  position: relative;
+  margin: 0 auto;
+  max-width: 75rem;
+  min-height: 20rem;
+  padding: 1rem;
+  opacity: 0;
+  overflow-y: auto;
+  z-index: 7;
+  visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+  -webkit-transition: all 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+  transition: all 0.6s cubic-bezier(0.55, 0, 0.1, 1); }
+  .modal .modal-content {
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+    transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+    -webkit-transition-delay: 0.3s;
+    transition-delay: 0.3s;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: column;
+    flex-flow: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .modal.active {
+    visibility: visible;
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1); }
+    .modal.active .modal-content {
+      opacity: 1; }
+
+/**
+ * Mobile styling
+ */
+@media only screen and (max-width: 39.9375em) {
+  .modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    -webkit-overflow-scrolling: touch;
+    border-radius: 0;
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    padding: 0 !important; } }
+
+.login {
+  width: 100%;
+  height: auto; }
+  .login .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .login .logo {
+    margin-top: 66px; }
+    .login .logo img {
+      width: auto;
+      height: 84px; }
+  .login .title {
+    width: 100%;
+    max-width: 605px;
+    height: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: column;
+    flex-flow: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    text-align: center; }
+    .login .title h2 {
+      margin-bottom: 16px; }
+  .login form {
+    width: 100%;
+    max-width: 431px;
+    height: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: column;
+    flex-flow: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+    .login form p {
+      width: 100%;
+      height: auto;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+      flex-flow: column;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; }
+      .login form p input {
+        height: 56px;
+        width: 100%;
+        border-radius: 27.5px;
+        background-color: #e6ebff;
+        padding: 0 44px;
+        border: none;
+        margin-bottom: 31px;
+        font: 15px Montserrat-Regular;
+        color: #2b3d8d; }
+        .login form p input::-webkit-input-placeholder {
+          color: #9194a1; }
+        .login form p input:-ms-input-placeholder {
+          color: #9194a1; }
+        .login form p input::-ms-input-placeholder {
+          color: #9194a1; }
+        .login form p input::placeholder {
+          color: #9194a1; }
+        .login form p input[type="password"] {
+          background: #ffffff;
+          border: 1px solid #f0743e;
+          margin-bottom: 0; }
+      .login form p span {
+        width: inherit;
+        max-width: inherit;
+        margin-right: 0;
+        position: relative; }
+        .login form p span.password:before {
+          content: 'Password';
+          position: absolute;
+          font: 15px Montserrat-Regular;
+          color: #f0743e;
+          background-color: #fff;
+          padding: 0 5px;
+          top: -10px;
+          left: 39px; }
+    .login form .btn {
+      width: 220px;
+      height: 56px;
+      border-radius: 27.5px;
+      margin-top: 46px; }
