--- a/css/main.css
+++ b/css/main.css
@@ -888,138 +888,6 @@ input[type=radio] {
       background-color: #ffffff;
       padding: 10px 19px; }
 
-.modal-overlay {
-  z-index: 200; }
-  .modal-overlay .modal {
-    width: 1077px;
-    height: 588px; }
-
-.modal-content .container {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-flow: column;
-  flex-flow: column; }
-
-.modal-content .title {
-  width: 100%;
-  height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  margin: 47px 0 40px 0; }
-  .modal-content .title h2 {
-    margin: 0; }
-
-.modal-table {
-  width: 100%;
-  height: auto;
-  padding: 0 54px; }
-  .modal-table table {
-    width: 100%;
-    height: auto;
-    border-collapse: collapse; }
-    .modal-table table tr {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-      justify-content: space-between; }
-    .modal-table table th {
-      width: 170px;
-      text-align: left;
-      padding-bottom: 8px;
-      font: 15px Montserrat-Medium;
-      color: #2b3d8d; }
-    .modal-table table .indicator {
-      width: 170px;
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-      justify-content: space-between; }
-      .modal-table table .indicator span {
-        width: 18px;
-        height: 18px;
-        position: relative; }
-        .modal-table table .indicator span img {
-          position: absolute;
-          right: 0;
-          top: 2px; }
-    .modal-table table td {
-      width: 170px;
-      padding-bottom: 35px;
-      font: 13px Montserrat-Regular;
-      color: #565656; }
-      .modal-table table td span {
-        width: 170px;
-        height: 40px;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        align-items: center;
-        border-radius: 20px;
-        background-color: #f0f2fa;
-        padding: 10px 20px; }
-  .modal-table .btns {
-    width: 100%;
-    height: auto;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    margin: 33px 0 32px 0; }
-    .modal-table .btns .btn {
-      width: 160px;
-      height: 50px;
-      border-radius: 25px;
-      margin: 0 15px;
-      border: 1px solid #f0743e;
-      -webkit-transition: .3s;
-      transition: .3s; }
-      .modal-table .btns .btn:hover, .modal-table .btns .btn.active {
-        border: 1px solid #2b3d8d;
-        background: #ffffff;
-        color: #2b3d8d; }
-
-.check {
-  display: inline-block;
-  width: 18px;
-  height: 18px;
-  position: absolute;
-  left: 0;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-  border-radius: 5px;
-  border: 1px solid #e6ebff; }
-  .check:after {
-    content: '';
-    position: absolute;
-    top: 2px;
-    left: 6px;
-    width: 3px;
-    height: 7px;
-    -webkit-transform: rotate(45deg);
-    transform: rotate(45deg);
-    border-right: 2px solid #47d881;
-    border-bottom: 2px solid #47d881; }
-  .check.grey {
-    background: #f0f2fa; }
-    .check.grey:after {
-      border-color: #c5c9dc; }
-
 /**
  * Variables
  */
@@ -1139,6 +1007,160 @@ input[type=radio] {
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
     padding: 0 !important; } }
+
+.modal-overlay {
+  z-index: 200; }
+  .modal-overlay .modal {
+    width: 1077px;
+    height: 588px; }
+
+.modal-content .container {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: column;
+  flex-flow: column; }
+
+.modal-content .title {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin: 47px 0 40px 0; }
+  .modal-content .title h2 {
+    margin: 0; }
+
+.modal-table {
+  width: 100%;
+  height: auto;
+  padding: 0 54px; }
+  .modal-table table {
+    width: 100%;
+    height: auto;
+    border-collapse: collapse; }
+    .modal-table table tr {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+      justify-content: space-between; }
+    .modal-table table th {
+      width: 170px;
+      text-align: left;
+      padding-bottom: 5px;
+      font: 15px Montserrat-Medium;
+      color: #2b3d8d; }
+    .modal-table table .indicator {
+      width: 170px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+      justify-content: space-between; }
+      .modal-table table .indicator span {
+        width: 18px;
+        height: 18px;
+        position: relative; }
+        .modal-table table .indicator span img {
+          position: absolute;
+          right: 0;
+          top: 2px; }
+    .modal-table table td {
+      width: 170px;
+      padding-bottom: 35px;
+      font: 13px Montserrat-Regular;
+      color: #565656; }
+      .modal-table table td span {
+        width: 170px;
+        height: 40px;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        border-radius: 20px;
+        background-color: #f0f2fa;
+        padding: 10px 20px; }
+  .modal-table .btns {
+    width: 100%;
+    height: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin: 33px 0 32px 0; }
+    .modal-table .btns .btn {
+      width: 160px;
+      height: 50px;
+      border-radius: 25px;
+      margin: 0 15px;
+      border: 1px solid #f0743e;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+      justify-content: space-between;
+      padding: 0 38px;
+      -webkit-transition: .3s;
+      transition: .3s; }
+      .modal-table .btns .btn:hover, .modal-table .btns .btn.active {
+        border: 1px solid #2b3d8d;
+        background: #ffffff;
+        color: #2b3d8d; }
+        .modal-table .btns .btn:hover svg path, .modal-table .btns .btn.active svg path {
+          fill: #2b3d8d; }
+      .modal-table .btns .btn svg {
+        width: auto;
+        height: 20px; }
+        .modal-table .btns .btn svg path {
+          -webkit-transition: .3s;
+          transition: .3s;
+          fill: #ffffff; }
+    .modal-table .btns .search svg {
+      height: 15px;
+      width: auto; }
+
+.check {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  border-radius: 5px;
+  border: 1px solid #e6ebff; }
+  .check:after {
+    content: '';
+    position: absolute;
+    top: 2px;
+    left: 6px;
+    width: 3px;
+    height: 7px;
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    border-right: 2px solid #47d881;
+    border-bottom: 2px solid #47d881; }
+  .check.grey {
+    background: #f0f2fa; }
+    .check.grey:after {
+      border-color: #c5c9dc; }
 
 .login {
   width: 100%;
