--- a/sass/_login.sass
+++ b/sass/_login.sass
@@ -1,7 +1,13 @@
 .login
-  width: 100%
-  height: auto
+  width: 100vw
+  height: 100vh
+  padding-top: 0 !important
+  padding-bottom: 50px
+  display: flex
+  justify-content: center
+  align-items: center
   .container
+    height: auto
     display: flex
     align-items: center
   .logo
