--- a/sass/_head.sass
+++ b/sass/_head.sass
@@ -1,6 +1,7 @@
 header
   height: 70px
   border-bottom: 1px solid #f1f1f1
+  //z-index: 2
   .container
     justify-content: space-between
     align-items: center
@@ -12,8 +13,11 @@ header
     a
       width: 100%
       height: 100%
+      display: block
     img
-      margin: 10px 0
+      height: 100%
+      width: auto
+      //margin: 10px 0
 
 
 nav
@@ -50,7 +54,124 @@ nav
         background: #f0743e
 
 
+.mob-menu
+  position: fixed
+  background: #ffffff
+  //z-index: 1
+  .container
+    padding: 0
+  .logo, .hamburger
+    margin: 0 2%
+  nav
+    z-index: -1
+    min-width: 100%
+    height: auto
+    display: flex
+    position: absolute
+    top: -120px
+    transition: .3s
+    ul
+      width: 100%
+      height: auto
+      min-height: 60px
+      position: absolute
+      top: 0
+      left: 0
+      display: flex
+      flex-flow: row
+      justify-content: space-evenly
+      background: #f0f2fa
+      border-bottom: 2px solid $dusty-orange
+    a.active, a:hover
+      &:before
+        display: none
+
+//.vert-line
+//  height: 2px
+//  width: 50%
+
+
+
+.mob-menu nav.open
+  top: 0
+  ul
+    top: 60px
+
 
 
 .hamburger
+  width: 50px
+  height: auto
+  //position: absolute
+  //right: 2%
+  //top: 14px
+  //left: 50%
+  //transform: translate(-50%, -50%)
   display: none
+  cursor: pointer
+  &:after
+    content: ""
+    width: 100%
+    height: 59px
+    position: absolute
+    top: 0
+    left: 0
+    background: #ffffff
+    z-index: -1
+
+.hamburger span
+  display: block
+  width: 50px
+  height: 5px
+  background-color: $dusk-blue
+  border-radius: 2.5px
+  margin-bottom: 8px
+  box-shadow: 0 1px 2px rgba(0,0,0, .2)
+  transition: .5s
+  padding: -5px 0
+  &:nth-of-type(2)
+    width: 37px
+    transform: translateX(13px)
+  &:nth-of-type(3)
+    margin: 0
+    width: 25px
+    transform: translateX(25px)
+
+.hamburger.active span:nth-child(2)
+  transform: translateX(-37px)
+  opacity: 0
+
+.hamburger.active span:nth-child(1)
+  transform: rotateY(180deg) rotateZ(45deg) translate(9px, 9px)
+
+.hamburger.active span:nth-child(3)
+  width: 50px
+  transform: rotateY(180deg) rotateZ(-45deg) translate(9px, -9px)
+
+.hamburger p
+  display: none
+  position: absolute
+  bottom: -15px
+  width: 100%
+  text-transform: uppercase
+  text-align: center
+  font-size: 12px
+  font-family: sans-serif
+  font-weight: bold
+  color: #fff
+  border-radius: 6px
+  background-color: #9966cc
+  box-shadow: 0 1px 2px rgba(0,0,0, .2)
+  backface-visibility: hidden
+  transition: .5s
+
+.hamburger.active p.menu
+  transform: rotateY(180deg)
+
+.hamburger p.close
+  transform: rotateY(180deg)
+
+.hamburger.active p.close
+  transform: rotateY(0deg)
+  background-color: #fff
+  color: #9966cc
