--- a/sass/_modal-content.sass
+++ b/sass/_modal-content.sass
@@ -1,12 +1,15 @@
 .modal-overlay
   z-index: 200
   .modal
-    width: 1077px
-    height: 588px
+    max-width: 1077px
+    max-height: 588px
+    width: 100%
+    height: 100%
 
 .modal-content
   .container
     flex-flow: column
+    padding: 0
 
   .title
     width: 100%
@@ -23,7 +26,7 @@
 .modal-table
   width: 100%
   height: auto
-  padding: 0 54px
+  padding: 0 34px
   table
     width: 100%
     height: auto
