--- a/sass/_page-4.sass
+++ b/sass/_page-4.sass
@@ -34,61 +34,48 @@
 .table-page-4__1
   width: 100%
   height: auto
-  border-collapse: collapse
   background-color: #f0f2fa
   border-radius: 10px
   overflow: hidden
+  display: flex
+  justify-content: space-between
   margin-bottom: 12px
-  thead
-    tr
-      //background-color: #f0f2fa
-    th
+  .table-body
+    width: 100%
+    height: auto
+    display: flex
+    justify-content: space-between
+    padding: 0 30px
+    table
       width: 180px
-      padding-top: 19px
-      text-align: left
-      padding-bottom: 13px
-      &:first-of-type
-        border-radius: 10px 0 0 0
-        padding-left: 30px
-      &:nth-last-of-type(2)
-        padding-right: 30px
-    td
-      width: 180px
-      padding-bottom: 25px
-      &:first-of-type
-        border-radius: 0 0 0 10px
-        padding-left: 30px
-      &:nth-last-of-type(1)
-        padding-right: 30px
-      span
-        width: 180px
-        height: 40px
-        display: flex
-        align-items: center
-        border-radius: 20px
-        background-color: #ffffff
-        padding: 10px 19px
+      border-collapse: collapse
+      th
+        width: 100%
+        text-align: left
+        padding-bottom: 13px
+        padding-top: 19px
+      td
+        width: 100%
+        padding-bottom: 25px
+        span
+          width: 180px
+          height: 40px
+          display: flex
+          align-items: center
+          border-radius: 20px
+          background-color: #ffffff
+          padding: 10px 19px
 
   .report-btn
     width: 270px
-    //border-radius: 0 10px 10px 0
+    height: 116px
     border-radius: 10px
     background-color: $dusty-orange
-    padding: 0
-    span
-      width: 100%
-      height: 116px
-      display: flex
-      justify-content: center
-      align-items: center
-    a
-      width: 100%
-      height: 100%
-      display: flex
-      justify-content: center
-      align-items: center
-      color: #ffffff
-      font: 18px Montserrat-Medium
+    display: flex
+    justify-content: center
+    align-items: center
+    color: #ffffff
+    font: 18px Montserrat-Medium
 
 .table-page-4__2
   width: 100%
