--- a/css/main.css
+++ b/css/main.css
@@ -1472,7 +1472,14 @@ input[type=radio] {
   .modal {
     max-width: 100% !important;
     max-height: 100% !important;
-    border-radius: 0; } }
+    border-radius: 0; }
+    .modal .modal-content .container {
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; } }
 
 @media (max-width: 768px) {
   header {
