--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -67,6 +67,10 @@
     max-width: 100% !important
     max-height: 100% !important
     border-radius: 0
+    .modal-content
+      .container
+        align-items: center
+        justify-content: center
 
 
 
