--- a/sass/_head.sass
+++ b/sass/_head.sass
@@ -1,7 +1,7 @@
 header
   height: 70px
   border-bottom: 1px solid #f1f1f1
-  //z-index: 2
+  z-index: 10
   .container
     justify-content: space-between
     align-items: center
