--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -68,9 +68,23 @@
     max-height: 100% !important
     border-radius: 0
     .modal-content
-      .container
-        align-items: center
-        justify-content: center
+    .modal-table
+      display: flex
+      justify-content: center
+      flex-flow: column
+      padding: 0 0
+      min-width: 740px
+      table
+        overflow-x: auto
+        th
+          width: 135px
+          //margin-bottom: 9px
+        td
+          width: 135px
+          span
+            width: 135px
+            height: 31px
+
 
 
 
