--- a/sass/_head.sass
+++ b/sass/_head.sass
@@ -82,6 +82,8 @@ nav
       justify-content: space-evenly
       background: #f0f2fa
       border-bottom: 2px solid $dusty-orange
+    a
+      font: bold 15px Montserrat-Bold
     a.active, a:hover
       &:before
         display: none
