--- a/css/main.css
+++ b/css/main.css
@@ -743,6 +743,9 @@ input[type=radio] {
 .no {
   color: #ec2727; }
 
+.pagination {
+  margin-bottom: 50px; }
+
 .pagination,
 .pagination li a {
   display: -webkit-box;
@@ -1146,7 +1149,13 @@ input[type=radio] {
   -webkit-box-direction: normal;
   -ms-flex-flow: column;
   flex-flow: column;
-  padding: 0; }
+  padding: 0;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
 
 .modal-content .title {
   width: 100%;
@@ -1165,103 +1174,141 @@ input[type=radio] {
   width: 100%;
   height: auto;
   padding: 0 34px; }
-  .modal-table table {
-    width: 100%;
-    height: auto;
-    border-collapse: collapse; }
-    .modal-table table tr {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-      justify-content: space-between; }
-    .modal-table table th {
-      width: 170px;
-      text-align: left;
-      padding-bottom: 5px;
-      font: 15px Montserrat-Medium;
-      color: #2b3d8d; }
-    .modal-table table .indicator {
-      width: 170px;
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-      justify-content: space-between; }
-      .modal-table table .indicator span {
-        width: 18px;
-        height: 18px;
-        position: relative; }
-        .modal-table table .indicator span img {
-          position: absolute;
-          right: 0;
-          top: 2px; }
-    .modal-table table td {
-      width: 170px;
-      padding-bottom: 35px;
-      font: 13px Montserrat-Regular;
-      color: #565656; }
-      .modal-table table td span {
-        width: 170px;
-        height: 40px;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        align-items: center;
-        border-radius: 20px;
-        background-color: #f0f2fa;
-        padding: 10px 20px; }
-  .modal-table .btns {
+  .modal-table .wrap-table {
     width: 100%;
     height: auto;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    margin: 33px 0 32px 0; }
-    .modal-table .btns .btn {
-      width: 160px;
-      height: 50px;
-      border-radius: 25px;
-      margin: 0 15px;
-      border: 1px solid #f0743e;
+    overflow-y: auto;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: row wrap;
+    flex-flow: row wrap;
+    -webkit-box-pack: space-evenly;
+    -ms-flex-pack: space-evenly;
+    justify-content: space-evenly;
+    margin: 17px auto 0; }
+    .modal-table .wrap-table table {
+      width: 170px;
+      height: auto;
+      border-collapse: collapse;
+      margin: 3px; }
+      .modal-table .wrap-table table tr {
+        height: auto;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+        flex-flow: column;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -ms-flex-line-pack: center;
+        align-content: center; }
+      .modal-table .wrap-table table th {
+        width: 170px;
+        text-align: left;
+        padding-bottom: 5px;
+        font: 15px Montserrat-Medium;
+        color: #2b3d8d; }
+      .modal-table .wrap-table table td {
+        width: 170px;
+        font: 13px Montserrat-Regular;
+        color: #565656;
+        margin-bottom: 35px; }
+        .modal-table .wrap-table table td span {
+          width: 170px;
+          height: 40px;
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-align: center;
+          -ms-flex-align: center;
+          align-items: center;
+          border-radius: 20px;
+          background-color: #f0f2fa;
+          padding: 10px 20px; }
+  .modal-table .indicators {
+    width: 100%;
+    height: auto;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: row wrap;
+    flex-flow: row wrap;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+    .modal-table .indicators li {
+      width: 170px;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
-      -webkit-box-align: center;
-      -ms-flex-align: center;
-      align-items: center;
       -webkit-box-pack: justify;
       -ms-flex-pack: justify;
       justify-content: space-between;
-      padding: 0 38px;
-      -webkit-transition: .3s;
-      transition: .3s; }
-      .modal-table .btns .btn:hover, .modal-table .btns .btn.active {
-        border: 1px solid #2b3d8d;
-        background: #ffffff;
-        color: #2b3d8d; }
-        .modal-table .btns .btn:hover svg path, .modal-table .btns .btn.active svg path {
-          fill: #2b3d8d; }
-      .modal-table .btns .btn svg {
-        width: auto;
-        height: 20px; }
-        .modal-table .btns .btn svg path {
-          -webkit-transition: .3s;
-          transition: .3s;
-          fill: #ffffff; }
-    .modal-table .btns .search svg {
-      height: 15px;
-      width: auto; }
+      margin-left: 20px;
+      margin-bottom: 10px;
+      font: 15px Montserrat-Medium;
+      color: #2b3d8d; }
+      .modal-table .indicators li span {
+        width: 18px;
+        height: 18px;
+        position: relative; }
+        .modal-table .indicators li span img {
+          position: absolute;
+          right: 0;
+          top: 2px; }
+
+.btns {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin: 33px 0 32px 0; }
+  .btns .btn {
+    width: 160px;
+    height: 50px;
+    border-radius: 25px;
+    margin: 0 15px;
+    border: 1px solid #f0743e;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: 0 38px;
+    -webkit-transition: .3s;
+    transition: .3s; }
+    .btns .btn:hover, .btns .btn.active {
+      border: 1px solid #2b3d8d;
+      background: #ffffff;
+      color: #2b3d8d; }
+      .btns .btn:hover svg path, .btns .btn.active svg path {
+        fill: #2b3d8d; }
+    .btns .btn svg {
+      width: auto;
+      height: 20px; }
+      .btns .btn svg path {
+        -webkit-transition: .3s;
+        transition: .3s;
+        fill: #ffffff; }
+  .btns .search svg {
+    height: 15px;
+    width: auto; }
 
 .check {
   display: inline-block;
@@ -1487,17 +1534,22 @@ input[type=radio] {
       -webkit-box-direction: normal;
       -ms-flex-flow: column;
       flex-flow: column;
-      padding: 0 0;
-      min-width: 740px; }
-      .modal .modal-table table {
-        overflow-x: auto; }
-        .modal .modal-table table th {
-          width: 135px; }
-        .modal .modal-table table td {
-          width: 135px; }
-          .modal .modal-table table td span {
-            width: 135px;
-            height: 31px; } }
+      padding: 0 0; }
+      .modal .modal-table table th {
+        width: 135px; }
+      .modal .modal-table table td {
+        width: 135px;
+        margin-bottom: 20px; }
+        .modal .modal-table table td span {
+          width: 135px;
+          height: 31px; }
+      .modal .modal-table .indicators {
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center; } }
 
 @media (max-width: 768px) {
   header {
@@ -1536,7 +1588,7 @@ input[type=radio] {
       width: auto; } }
 
 @media (max-width: 600px) {
-  th {
+  th, .indicators__item {
     font-size: 14px; }
   td {
     font-size: 13px; }
@@ -1567,7 +1619,7 @@ input[type=radio] {
   .page-3__1 .wrap-table {
     overflow-x: scroll; }
   .page-3__1 table {
-    min-width: 600px; }
+    min-width: 800px; }
   .title-report h2 {
     font-size: 20px !important;
     padding-right: 13px !important; }
@@ -1640,3 +1692,38 @@ input[type=radio] {
         .home-menu li a img {
           height: 25px;
           margin-right: 10px; } }
+
+@media (max-width: 950px) {
+  header {
+    z-index: 0; }
+  .modal {
+    max-width: 100% !important;
+    max-height: 100% !important;
+    border-radius: 0; }
+    .modal .modal-content .title {
+      margin: 20px 0 10px 0; }
+    .modal .modal-table {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+      flex-flow: column;
+      padding: 0 0; }
+      .modal .modal-table table {
+        width: 135px;
+        height: auto;
+        overflow-y: auto; }
+        .modal .modal-table table td {
+          margin-bottom: 20px; }
+      .modal .modal-table .indicators {
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center; } }
