--- a/sass/_modal-content.sass
+++ b/sass/_modal-content.sass
@@ -10,6 +10,8 @@
   .container
     flex-flow: column
     padding: 0
+    align-items: center
+    justify-content: center
 
   .title
     width: 100%
@@ -27,23 +29,60 @@
   width: 100%
   height: auto
   padding: 0 34px
-  table
+  .wrap-table
     width: 100%
     height: auto
-    border-collapse: collapse
-    tr
+    display: flex
+    overflow-y: auto
+    flex-flow: row wrap
+    justify-content: space-evenly
+    //padding: 20px 10px
+    margin: 17px auto 0
+    table
+      width: 170px
+      height: auto
+      border-collapse: collapse
+      margin: 3px
+      tr
+        height: auto
+        display: flex
+        flex-flow: column
+        align-items: center
+        align-content: center
+      th
+        width: 170px
+        text-align: left
+        padding-bottom: 5px
+        font: 15px Montserrat-Medium
+        color: $dusk-blue
+      td
+        width: 170px
+        //padding-bottom: 35px
+        font: 13px Montserrat-Regular
+        color: $greyish-brown
+        margin-bottom: 35px
+        span
+          width: 170px
+          height: 40px
+          display: flex
+          align-items: center
+          border-radius: 20px
+          background-color: #f0f2fa
+          padding: 10px 20px
+
+  .indicators
+    width: 100%
+    height: auto
+    flex-flow: row wrap
+    display: flex
+    li
+      width: 170px
       display: flex
       justify-content: space-between
-    th
-      width: 170px
-      text-align: left
-      padding-bottom: 5px
+      margin-left: 20px
+      margin-bottom: 10px
       font: 15px Montserrat-Medium
-      color: $dusk-blue
-    .indicator
-      width: 170px
-      display: flex
-      justify-content: space-between
+      color: #2b3d8d
       span
         width: 18px
         height: 18px
@@ -52,54 +91,41 @@
           position: absolute
           right: 0
           top: 2px
-    td
-      width: 170px
-      padding-bottom: 35px
-      font: 13px Montserrat-Regular
-      color: $greyish-brown
-      span
-        width: 170px
-        height: 40px
-        display: flex
-        align-items: center
-        border-radius: 20px
-        background-color: #f0f2fa
-        padding: 10px 20px
 
-  .btns
-    width: 100%
-    height: auto
+.btns
+  width: 100%
+  height: auto
+  display: flex
+  justify-content: center
+  align-items: center
+  margin: 33px 0 32px 0
+  .btn
+    width: 160px
+    height: 50px
+    border-radius: 25px
+    margin: 0 15px
+    border: 1px solid $dusty-orange
     display: flex
-    justify-content: center
     align-items: center
-    margin: 33px 0 32px 0
-    .btn
-      width: 160px
-      height: 50px
-      border-radius: 25px
-      margin: 0 15px
-      border: 1px solid $dusty-orange
-      display: flex
-      align-items: center
-      justify-content: space-between
-      padding: 0 38px
-      transition: .3s
-      &:hover, &.active
-        border: 1px solid $dusk-blue
-        background: #ffffff
-        color: $dusk-blue
-        svg path
-          fill: $dusk-blue
-      svg
-        width: auto
-        height: 20px
-        path
-          transition: .3s
-          fill: #ffffff
-    .search
-      svg
-        height: 15px
-        width: auto
+    justify-content: space-between
+    padding: 0 38px
+    transition: .3s
+    &:hover, &.active
+      border: 1px solid $dusk-blue
+      background: #ffffff
+      color: $dusk-blue
+      svg path
+        fill: $dusk-blue
+    svg
+      width: auto
+      height: 20px
+      path
+        transition: .3s
+        fill: #ffffff
+  .search
+    svg
+      height: 15px
+      width: auto
 
 
 
