--- a/sass/_head.sass
+++ b/sass/_head.sass
@@ -7,6 +7,7 @@ header
     align-items: center
 
 
+
   .logo
     width: auto
     height: auto
@@ -57,7 +58,7 @@ nav
 .mob-menu
   position: fixed
   background: #ffffff
-  //z-index: 1
+  z-index: 10
   .container
     padding: 0
   .logo, .hamburger
